--- a/src/main/resources/com/example/theatrebookingsystem/showView.fxml
+++ b/src/main/resources/com/example/theatrebookingsystem/showView.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.theatrebookingsystem.ShowController">
    <children>
@@ -15,16 +17,22 @@
             <Font name="Berlin Sans FB Demi Bold" size="23.0" />
          </font>
       </Label>
-      <Button layoutX="7.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="120.0" text="MAIN" />
+      <Button layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="127.0" text="MAIN" />
       <Button layoutX="127.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToShowView" prefHeight="26.0" prefWidth="120.0" text="SHOW" />
       <Button layoutX="247.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="120.0" text="PERFOMANCE" />
       <Button layoutX="367.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="120.0" text="BOOKING" />
-      <Button layoutX="487.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="120.0" text="USER" />
-      <TextField fx:id="titleField" layoutX="15.0" layoutY="82.0" prefHeight="26.0" prefWidth="100.0" text="Title" />
-      <TextField fx:id="runningTimeField" layoutX="127.0" layoutY="82.0" prefHeight="26.0" prefWidth="100.0" text="running time" />
-      <TextField fx:id="startDateField" layoutX="240.0" layoutY="82.0" prefHeight="26.0" prefWidth="100.0" text="start date " />
-      <TextField fx:id="endDateField" layoutX="351.0" layoutY="82.0" prefHeight="26.0" prefWidth="100.0" text="end date " />
-      <TextField fx:id="ticketPriceField" layoutX="463.0" layoutY="82.0" prefHeight="26.0" prefWidth="100.0" text="ticket price " />
-      <Button layoutX="573.0" layoutY="82.0" mnemonicParsing="false" onAction="#addShowList" prefHeight="26.0" prefWidth="26.0" text="Button" />
+      <Button layoutX="487.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="127.0" text="USER" />
+      <TextField fx:id="titleField" layoutX="14.0" layoutY="95.0" prefHeight="26.0" prefWidth="100.0" promptText="title" />
+      <TextField fx:id="runningTimeField" layoutX="127.0" layoutY="95.0" prefHeight="26.0" prefWidth="100.0" promptText="running time" />
+      <TextField fx:id="ticketPriceField" layoutX="463.0" layoutY="95.0" prefHeight="26.0" prefWidth="100.0" promptText="ticket price" />
+      <Button layoutX="573.0" layoutY="95.0" mnemonicParsing="false" onAction="#addShowList" prefHeight="26.0" prefWidth="26.0" text="+" />
+      <DatePicker fx:id="startDateField" layoutX="234.0" layoutY="95.0" prefHeight="26.0" prefWidth="100.0" promptText="start date" />
+      <DatePicker fx:id="endDateField" layoutX="346.0" layoutY="95.0" prefHeight="26.0" prefWidth="100.0" promptText="end date" />
+      <Button fx:id="deleteButton" layoutX="523.0" layoutY="344.0" mnemonicParsing="false" onAction="#deleteShow" text="delete show" />
+      <Text layoutX="15.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add a show">
+         <font>
+            <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
