--- a/src/main/resources/com/example/theatrebookingsystem/showView.fxml
+++ b/src/main/resources/com/example/theatrebookingsystem/showView.fxml
@@ -19,20 +19,22 @@
       </Label>
       <Button layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="127.0" text="MAIN" />
       <Button layoutX="127.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToShowView" prefHeight="26.0" prefWidth="120.0" text="SHOW" />
-      <Button layoutX="247.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="120.0" text="PERFOMANCE" />
+      <Button layoutX="247.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToPerfomanceView" prefHeight="26.0" prefWidth="120.0" text="PERFOMANCE" />
       <Button layoutX="367.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="120.0" text="BOOKING" />
-      <Button layoutX="487.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="127.0" text="USER" />
-      <TextField fx:id="titleField" layoutX="14.0" layoutY="95.0" prefHeight="26.0" prefWidth="100.0" promptText="title" />
-      <TextField fx:id="runningTimeField" layoutX="127.0" layoutY="95.0" prefHeight="26.0" prefWidth="100.0" promptText="running time" />
-      <TextField fx:id="ticketPriceField" layoutX="463.0" layoutY="95.0" prefHeight="26.0" prefWidth="100.0" promptText="ticket price" />
+      <Button layoutX="487.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToCustomerView" prefHeight="26.0" prefWidth="127.0" text="USER" />
+      <TextField fx:id="titleField" layoutX="14.0" layoutY="95.0" prefHeight="26.0" prefWidth="62.0" promptText="title" />
+      <TextField fx:id="runningTimeField" layoutX="87.0" layoutY="95.0" prefHeight="26.0" prefWidth="62.0" promptText="running time" />
+      <TextField fx:id="stallsTicketPriceField" layoutX="333.0" layoutY="95.0" prefHeight="26.0" prefWidth="80.0" promptText="stalls ticket" />
       <Button layoutX="573.0" layoutY="95.0" mnemonicParsing="false" onAction="#addShowList" prefHeight="26.0" prefWidth="26.0" text="+" />
-      <DatePicker fx:id="startDateField" layoutX="234.0" layoutY="95.0" prefHeight="26.0" prefWidth="100.0" promptText="start date" />
-      <DatePicker fx:id="endDateField" layoutX="346.0" layoutY="95.0" prefHeight="26.0" prefWidth="100.0" promptText="end date" />
+      <DatePicker fx:id="startDateField" layoutX="156.0" layoutY="95.0" prefHeight="26.0" prefWidth="80.0" promptText="start date" />
+      <DatePicker fx:id="endDateField" layoutX="236.0" layoutY="95.0" prefHeight="26.0" prefWidth="80.0" promptText="end date" />
       <Button fx:id="deleteButton" layoutX="523.0" layoutY="344.0" mnemonicParsing="false" onAction="#deleteShow" text="delete show" />
       <Text layoutX="15.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add a show">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="12.0" />
          </font>
       </Text>
+      <TextField fx:id="circleTicketPriceField" layoutX="413.0" layoutY="95.0" prefHeight="26.0" prefWidth="80.0" promptText="circle ticket" />
+      <TextField fx:id="balconyTicketPriceField" layoutX="493.0" layoutY="95.0" prefHeight="26.0" prefWidth="80.0" promptText="balcony ticket" />
    </children>
 </AnchorPane>
