--- a/src/main/resources/com/example/theatrebookingsystem/perfomanceView.fxml
+++ b/src/main/resources/com/example/theatrebookingsystem/perfomanceView.fxml
@@ -13,7 +13,7 @@
       <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="127.0" text="MAIN" />
       <Button layoutX="127.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToShowView" prefHeight="26.0" prefWidth="120.0" text="SHOW" />
       <Button layoutX="247.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToPerfomanceView" prefHeight="26.0" prefWidth="120.0" text="PERFOMANCE" />
-      <Button layoutX="367.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="120.0" text="BOOKING" />
+      <Button layoutX="367.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToBookingView" prefHeight="26.0" prefWidth="120.0" text="BOOKING" />
       <Button layoutX="487.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToCustomerView" prefHeight="26.0" prefWidth="127.0" text="USER" />
       <Label layoutX="14.0" layoutY="36.0" text="perfomances">
          <font>
