--- a/src/main/resources/com/example/theatrebookingsystem/SeatsView.fxml
+++ b/src/main/resources/com/example/theatrebookingsystem/SeatsView.fxml
@@ -1,52 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.theatrebookingsystem.SeatsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.theatrebookingsystem.SeatsController">
    <children>
-      <TableView layoutX="119.0" layoutY="14.0" prefHeight="86.0" prefWidth="382.0">
-        <columns>
-          <TableColumn prefWidth="50.0" text="C1" />
-          <TableColumn prefWidth="50.0" text="C2" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-        </columns>
-      </TableView>
-      <TableView layoutX="75.0" layoutY="113.0" prefHeight="94.0" prefWidth="469.0">
-         <columns>
-            <TableColumn prefWidth="50.0" text="C1" />
-            <TableColumn prefWidth="50.0" text="C2" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-         </columns>
-      </TableView>
-      <TableView layoutX="75.0" layoutY="207.0" prefHeight="104.0" prefWidth="482.0">
-         <columns>
-            <TableColumn prefWidth="50.0" text="C1" />
-            <TableColumn prefWidth="50.0" text="C2" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-            <TableColumn prefWidth="50.0" text="Column X" />
-         </columns>
-      </TableView>
-      <Button fx:id="switchToBooking" layoutX="449.0" layoutY="361.0" mnemonicParsing="false" onAction="#switchToBookingView" prefHeight="26.0" prefWidth="109.0" text="choose seats" />
+      <VBox alignment="CENTER" layoutX="13.0" layoutY="7.0" prefHeight="322.0" prefWidth="478.0" spacing="20">
+         <children>
+            <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Select Your Seats">
+               <font>
+                  <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+               </font></Label>
+            <GridPane fx:id="balconyGrid" alignment="CENTER" />
+            <GridPane fx:id="circleGrid" alignment="CENTER" />
+            <GridPane fx:id="stallsGrid" alignment="CENTER" />
+            <HBox alignment="CENTER" spacing="10">
+               <children>
+                  <Button onAction="#switchToBookingView" text="Confirm Selection" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTGREEN" height="86.0" layoutX="491.0" layoutY="61.0" strokeType="INSIDE" strokeWidth="0.0" width="90.0">
+         <stroke>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </RadialGradient>
+         </stroke>
+      </Rectangle>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTBLUE" height="86.0" layoutX="491.0" layoutY="160.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="90.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="86.0" layoutX="491.0" layoutY="253.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="90.0" />
+      <Text layoutX="510.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BALCONY">
+         <font>
+            <Font name="Berlin Sans FB" size="12.0" />
+         </font>
+      </Text>
+      <Text layoutX="518.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CIRCLE">
+         <font>
+            <Font name="Berlin Sans FB" size="12.0" />
+         </font>
+      </Text>
+      <Text layoutX="517.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STALLS" />
    </children>
 </AnchorPane>
