--- a/src/main/resources/com/example/theatrebookingsystem/mainview.fxml
+++ b/src/main/resources/com/example/theatrebookingsystem/mainview.fxml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.theatrebookingsystem.MainController">
-   <children>
-      <AnchorPane layoutX="-1.0" prefHeight="400.0" prefWidth="600.0">
-         <children>
-            <Button layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="120.0" text="MAIN" />
-            <Button layoutX="120.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToShowView" prefHeight="26.0" prefWidth="120.0" text="SHOW" />
-            <Button layoutX="240.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToPerfomanceView" prefHeight="26.0" prefWidth="120.0" text="PERFOMANCE" />
-            <Button layoutX="360.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToBookingView" prefHeight="26.0" prefWidth="120.0" text="BOOKING" />
-            <Button layoutX="480.0" layoutY="1.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToCustomerView" prefHeight="26.0" prefWidth="120.0" text="USER" />
-            <Label layoutX="8.0" layoutY="83.0" text="WELCOME TO THE THEATRE BOOKING SYSTEM!">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="27.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
-   </children>
+<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.theatrebookingsystem.MainController">
+   <TabPane fx:id="tabPane" prefWidth="600.0" prefHeight="500.0">
+   <Tab text="Main">
+         <AnchorPane>
+         </AnchorPane>
+      </Tab>
+      <Tab text="Show">
+         <AnchorPane>
+            <fx:include source="showView.fxml"/>
+         </AnchorPane>
+      </Tab>
+      <Tab text="Performance">
+         <AnchorPane>
+            <fx:include source="perfomanceView.fxml"/>
+         </AnchorPane>
+      </Tab>
+      <Tab text="Customer">
+         <AnchorPane>
+            <fx:include source="customerView.fxml"/>
+         </AnchorPane>
+      </Tab>
+      <Tab text="Booking">
+         <AnchorPane>
+            <fx:include source="booking.fxml"/>
+         </AnchorPane>
+      </Tab>
+   </TabPane>
 </AnchorPane>
+
