--- a/src/main/resources/com/example/theatrebookingsystem/perfomanceView.fxml
+++ b/src/main/resources/com/example/theatrebookingsystem/perfomanceView.fxml
@@ -10,17 +10,12 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.theatrebookingsystem.PerfomanceController">
    <children>
-      <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToMainView" prefHeight="26.0" prefWidth="127.0" text="MAIN" />
-      <Button layoutX="127.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToShowView" prefHeight="26.0" prefWidth="120.0" text="SHOW" />
-      <Button layoutX="247.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToPerfomanceView" prefHeight="26.0" prefWidth="120.0" text="PERFOMANCE" />
-      <Button layoutX="367.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToBookingView" prefHeight="26.0" prefWidth="120.0" text="BOOKING" />
-      <Button layoutX="487.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchToCustomerView" prefHeight="26.0" prefWidth="127.0" text="USER" />
       <Label layoutX="14.0" layoutY="36.0" text="perfomances">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="23.0" />
          </font>
       </Label>
-      <ListView layoutY="122.0" prefHeight="254.0" prefWidth="614.0" />
+      <ListView layoutY="122.0" prefHeight="254.0" prefWidth="614.0" fx:id="perfomanceListView"  />
       <Label layoutX="14.0" layoutY="64.0" text="add new perfomance">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="12.0" />
