--- a/src/main/resources/com/example/theatrebookingsystem/SeatsView.fxml
+++ b/src/main/resources/com/example/theatrebookingsystem/SeatsView.fxml
@@ -28,7 +28,7 @@
             <HBox alignment="CENTER" spacing="10">
                <children>
                   <Button onAction="#addSeats" text="Confirm Selection" />
-                  <Button mnemonicParsing="false" onAction="#switchToBookingView" text="Back to the booking" />
+                  <Button fx:id="switchToBooking" mnemonicParsing="false" onAction="#switchToBookingView" text="Back to the booking" />
                </children>
             </HBox>
          </children>
